--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,12 +2,21 @@ name: CI/CD for Game UI Site
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]  # or 'main' if you're using main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - name: Docker Build
-        run: docker build -t game-ui-site .
+      - name: 📥 Checkout code
+        uses: actions/checkout@v3
+
+      - name: 🐳 Docker Build
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/game-ui-site .
+
+      - name: 🔐 Docker Login
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: 📤 Push Docker Image to DockerHub
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/game-ui-site
